# mergify

./: .buildinfo  .coveragerc  .env  .gitguardian.yaml  .gitignore  .mergify.yml  .semgrepignore  .spectral.yaml  .travis.yml  .yamllint.yml  CNAME  Dockerfile  Procfile  Procfile-backends  Procfile-celery  Procfile-test  README.md  README.rst  badge.html  commands.html  conditions.html  config.yml  configuration.html  constraints.txt  default_policy.yml  default_rule.yml  docker-compose.dev.yaml  docker-compose.monitoring.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  examples.html  fake.env  fake.yml  faq.html  genindex.html  getting-started.html  global-substitutions.html  gnocchixyz_policy.yml  index.html  (+13 more)
.circleci/: config.yml
.doctrees/: badge.doctree  commands.doctree  conditions.doctree  configuration.doctree  environment.pickle  examples.doctree  faq.doctree  getting-started.doctree  global-substitutions.doctree  index.doctree
.doctrees/actions/: assign.doctree  backport.doctree  close.doctree  comment.doctree  copy.doctree  delete_head_branch.doctree  dismiss_reviews.doctree  index.doctree  label.doctree  merge.doctree  post_check.doctree  queue.doctree  rebase.doctree  request_reviews.doctree  review.doctree  squash.doctree  update.doctree
.doctrees/examples/: bots.doctree
.github/: FUNDING.yml  clifus.yml  dependabot.yml  get-latest-python-version.py  issue_template.md  pull_request_template.md  updatecli.yml
.github/workflows/: ci-docker.yaml  ci-docs.yaml  ci-heroku.yaml  ci-pep8.yaml  ci-py39.yaml  ci-pyXX.yaml  ci-record-fixtures.yaml  ci-requirements.yaml  ci-test.yaml  ci.yaml  clifus.yaml  codeql-analysis.yml  docker-upload-dockerhub.yaml  docker.yaml  docs-pr.yaml  docs-upload-gcp-prod.yaml  docs-upload-gcp-temp.yaml  docs-upload-gcp.yaml  docs-upload-gh-pages.yaml  docs.yaml  releaser.yml  semantic-pull-request.yaml  semantic-pull-request.yml  syncer.yaml  updatecli.yaml
_bootstrap/: bootstrap.css  bootstrap.css.map
_sources/: examples.rst.txt  faq.rst.txt  getting-started.rst.txt  global-substitutions.rst.txt
_sources/actions/: assign.rst.txt  close.rst.txt  comment.rst.txt  copy.rst.txt  index.rst.txt  label.rst.txt  merge.rst.txt  rebase.rst.txt  request_reviews.rst.txt  review.rst.txt
_sources/examples/: bots.rst.txt
_static/: documentation_options.js
actions/: assign.html  backport.html  close.html  comment.html  copy.html  delete_head_branch.html  dismiss_reviews.html  index.html  label.html  merge.html  post_check.html  queue.html  rebase.html  request_reviews.html  review.html  squash.html  update.html
actions/assign/: index.html
actions/backport/: index.html
actions/close/: index.html
actions/comment/: index.html
actions/copy/: index.html
actions/delete_head_branch/: index.html
actions/dismiss_reviews/: index.html
actions/label/: index.html
actions/merge/: index.html
actions/post_check/: index.html
actions/queue/: index.html
actions/rebase/: index.html
actions/request_reviews/: index.html
actions/review/: index.html
actions/squash/: index.html
actions/update/: index.html
badge/: index.html
commands/: index.html
conditions/: index.html
configuration/: index.html
datadog/: prerun.sh  validate.py
datadog/conf.d/: mergify-engine.yaml  process.yaml  python.yaml  redisdb.yaml
doc/source/: _Sidebar.md  actions.rst  automated-backport.rst  badge.rst  commands.rst  conditions.rst  conf.py  configuration.rst  disabling.rst  examples.rst  faq.rst  first-steps.html  getting-started.rst  global-substitutions.rst  index.rst  merge-action.rst  strict-workflow.rst  use-cases.html  v1.rst
docs/: mergify_engine_gendoc.py  netlify-docs.sh  package.json  preview.html
docs/api/: index.html
docs/source/: actions.rst  api-intro.rst  badge.rst  commands.rst  conditions.rst  conf.py  configuration.rst  examples.rst  faq.rst  first-steps.html  getting-started.rst  global-substitutions.rst  index.rst  merge-action.rst  queues.rst  spelling_wordlist.txt  use-cases.html
examples/: bots.html  index.html
examples/bots/: index.html
faq/: index.html
genindex/: index.html
getting-started/: index.html
global-substitutions/: index.html
installer/: Procfile  asgi.py  package-lock.json  package.json
installer/public/: index.html  manifest.json
installer/src/: App.css  App.jsx  index.jsx
mergify_engine/: __init__.py  _datadog.py  admin.py  asgi.py  aws_auth.py  backports.py  branch_protection.py  branch_updater.py  cache.py  check_api.py  config.py  constants.py  context.py  count_seats.py  crypto.py  date.py  debug.py  delayed_refresh.py  doc.py  dump.py  duplicate_pull.py  engine.py  eventlogs.py  exceptions.py  functools_bp.py  gh.py  gh_app_token.py  gh_branch.py  gh_pr.py  gh_pr_fullifier.py  gh_update_branch.py  github_events.py  github_graphql_types.py  github_types.py  gitter.py  import_check.py  initial_configuration.py  jinja2_utils.py  json.py  logs.py  (+28 more)
mergify_engine/actions/: __init__.py  assign.py  backport.py  check_runs.py  close.py  comment.py  copy.py  delete_head_branch.py  dismiss_reviews.py  draft.py  edit.py  label.py  merge.py  merge_base.py  post_check.py  queue.py  rebase.py  refresh.py  request_reviews.py  requeue.py  review.py  squash.py  subscription.py  unqueue.py  update.py  utils.py
mergify_engine/clients/: common.py  dashboard.py  github.py  github_app.py  http.py
mergify_engine/dashboard/: application.py  subscription.py  user_tokens.py
mergify_engine/data/: default_pull_request_rules.yml
mergify_engine/engine/: __init__.py  actions_runner.py  commands_runner.py  queue_runner.py
mergify_engine/migrations/: __init__.py
mergify_engine/queue/: __init__.py  freeze.py  merge_train.py  naive.py
mergify_engine/rules/: __init__.py  checks_status.py  conditions.py  convert.py  filter.py  live_resolvers.py  parser.py  types.py
mergify_engine/static/: app.js  (+4 more)
monitoring/: prometheus.yaml
search/: index.html
tools/: cassette-check.sh  check-obsolete-fixtures.sh  clifus.py  deploy.sh  deploy.sh.new  gh-accounts-cleaner.sh  mergify-update.sh
(+5849 files in other folders)
