[metadata]
name = mergify_engine
home_page = https://github.com/mergifyio/mergify
summary = mergify-engine is a Github App to manager PR
description_file = README.rst
author = Mehdi Abaakouk
author_email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages =
    mergify_engine
    mergify_engine_signals.noop

include_package_data = true

install_requires =
    daiquiri>=3
    datadog
    python-dotenv
    fastapi
    python-multipart  # fastapi extra
    aiofiles
    uvicorn[standard]
    cryptography
    yaaredis
    hiredis
    httpx[http2]>=0.20.0
    pyyaml
    voluptuous
    sentry-sdk
    first
    tenacity
    gunicorn[setproctitle]
    honcho
    pyjwt
    cachetools
    msgpack
    jinja2
    werkzeug
    ddtrace==0.56.1
    markdownify

[options.extras_require]
test =
    freezegun
    pytest
    pytest-cov
    pytest-asyncio
    pytest-httpserver
    pytest-timeout
    pytest-github-actions-annotate-failures
    vcrpy>=4.1.1
pep8 =
    bandit
    flake8
    flake8-black
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-docstrings
    flake8-logging-format
    flake8-rst-docstrings
    flake8-use-fstring
    isort
    mypy>=0.901
    types-first
    types-freezegun
    types-pkg_resources
    types-PyYAML
    yamllint

docs =
    sphinx
    sphinxcontrib-spelling

[options.entry_points]
console_scripts =
    mergify-refresher = mergify_engine.web_cli:refresher
    mergify-queues = mergify_engine.web_cli:queues
    mergify-clear-token-cache = mergify_engine.web_cli:clear_token_cache
    mergify-debug = mergify_engine.debug:main
    mergify-worker-status = mergify_engine.worker:status
    mergify-reschedule = mergify_engine.worker:reschedule_now
    mergify-engine-worker = mergify_engine.worker:main
    mergify-import-check-worker = mergify_engine.import_check:import_check_worker
    mergify-import-check-web = mergify_engine.import_check:import_check_web
    mergify-count-seats = mergify_engine.count_seats:main
    mergify-openapi-spec = mergify_engine.web.api.root:generate_openapi_spec
    mergify-admin = mergify_engine.admin:main
    # TODO(sileht): compat, drop me
    mergify-import-check = mergify_engine.import_check:import_check_worker

mergify_actions =
    assign = mergify_engine.actions.assign:AssignAction
    backport = mergify_engine.actions.backport:BackportAction
    copy = mergify_engine.actions.copy:CopyAction
    post_check = mergify_engine.actions.post_check:PostCheckAction
    label = mergify_engine.actions.label:LabelAction
    delete_head_branch = mergify_engine.actions.delete_head_branch:DeleteHeadBranchAction
    merge = mergify_engine.actions.merge:MergeAction
    queue = mergify_engine.actions.queue:QueueAction
    close = mergify_engine.actions.close:CloseAction
    comment = mergify_engine.actions.comment:CommentAction
    review = mergify_engine.actions.review:ReviewAction
    dismiss_reviews = mergify_engine.actions.dismiss_reviews:DismissReviewsAction
    request_reviews = mergify_engine.actions.request_reviews:RequestReviewsAction
    rebase = mergify_engine.actions.rebase:RebaseAction
    update = mergify_engine.actions.update:UpdateAction
    refresh = mergify_engine.actions.refresh:RefreshAction
    squash = mergify_engine.actions.squash:SquashAction
    edit = mergify_engine.actions.edit:EditAction
    draft = mergify_engine.actions.draft:DraftAction

[build_wheel]
universal = 1

[mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
warn_return_any = true
files = mergify_engine,mergify_engine_signals
disallow_subclassing_any = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_decorators = true
show_error_codes = true
disallow_untyped_calls = true
plugins = pydantic.mypy

[tool:pytest]
addopts = --strict-markers
markers =
  recorder
  subscription
