[metadata]
name = mergify_engine
home_page = https://github.com/mergifyio/mergify
summary = mergify-engine is a Github App to manager PR
description_file = README.rst
author = Mehdi Abaakouk
author_email = sileht@sileht.net
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages =
    mergify_engine
    mergify_engine_signals.noop
    mergify_engine_signals.usage

include_package_data = true

install_requires =
    daiquiri>=3
    datadog
    python-dotenv
    fastapi
    python-multipart  # fastapi extra
    aiofiles
    uvicorn[standard]
    cryptography
    yaaredis
    hiredis
    httpx[http2]>=0.20.0
    pyyaml
    voluptuous
    sentry-sdk>=1.2.0
    first
    tenacity
    gunicorn[setproctitle]
    honcho
    pyjwt
    cachetools
    msgpack>=1.0.0
    jinja2
    werkzeug
    ddtrace==0.59.1
    markdownify
    graphql-utils>=0.4

[options.extras_require]
test =
    freezegun==1.2.0
    pytest==7.0.1
    pytest-cov==3.0.0
    pytest-asyncio==0.18.2
    pytest-httpserver==1.0.4
    pytest-timeout==2.1.0
    pytest-github-actions-annotate-failures==0.1.6
    vcrpy>=4.1.1
pep8 =
    flake8==4.0.1
    flake8-black==0.3.2
    flake8-blind-except==0.2.0
    flake8-bugbear==22.1.11
    flake8-builtins==1.5.3
    flake8-comprehensions==3.8.0
    flake8-docstrings==1.6.0
    flake8-logging-format==0.6.0
    flake8-rst-docstrings==0.2.5
    flake8-use-fstring==1.3
    isort==5.10.1
    mypy==0.940
    mypy-extensions==0.4.3
    types-first==2.0.2
    types-freezegun==1.1.6
    types-pkg-resources==0.1.3
    types-PyYAML==6.0.4
    yamllint==1.26.3
    reno==3.5.0
    # FIXME(sileht): allow to use the one from brew until pip installation is fixed
    # https://github.com/returntocorp/semgrep/issues/4311
    semgrep==0.84.0; sys_platform != 'darwin'

docs =
    sphinx
    sphinxcontrib-spelling

[options.entry_points]
console_scripts =
    mergify-refresher = mergify_engine.web_cli:refresher
    mergify-queues = mergify_engine.web_cli:queues
    mergify-clear-token-cache = mergify_engine.web_cli:clear_token_cache
    mergify-debug = mergify_engine.debug:main
    mergify-worker-status = mergify_engine.worker:status
    mergify-reschedule = mergify_engine.worker:reschedule_now
    mergify-engine-worker = mergify_engine.worker:main
    mergify-import-check-worker = mergify_engine.import_check:import_check_worker
    mergify-import-check-web = mergify_engine.import_check:import_check_web
    mergify-count-seats = mergify_engine.count_seats:main
    mergify-openapi-spec = mergify_engine.web.api.root:generate_openapi_spec
    mergify-admin = mergify_engine.admin:main
    # TODO(sileht): compat, drop me
    mergify-import-check = mergify_engine.import_check:import_check_worker

mergify_actions =
    assign = mergify_engine.actions.assign:AssignAction
    backport = mergify_engine.actions.backport:BackportAction
    copy = mergify_engine.actions.copy:CopyAction
    post_check = mergify_engine.actions.post_check:PostCheckAction
    label = mergify_engine.actions.label:LabelAction
    delete_head_branch = mergify_engine.actions.delete_head_branch:DeleteHeadBranchAction
    merge = mergify_engine.actions.merge:MergeAction
    queue = mergify_engine.actions.queue:QueueAction
    close = mergify_engine.actions.close:CloseAction
    comment = mergify_engine.actions.comment:CommentAction
    review = mergify_engine.actions.review:ReviewAction
    dismiss_reviews = mergify_engine.actions.dismiss_reviews:DismissReviewsAction
    request_reviews = mergify_engine.actions.request_reviews:RequestReviewsAction
    rebase = mergify_engine.actions.rebase:RebaseAction
    update = mergify_engine.actions.update:UpdateAction
    refresh = mergify_engine.actions.refresh:RefreshAction
    squash = mergify_engine.actions.squash:SquashAction
    edit = mergify_engine.actions.edit:EditAction
    draft = mergify_engine.actions.draft:DraftAction

[build_wheel]
universal = 1

[mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = true
warn_return_any = true
files = mergify_engine,mergify_engine_signals
disallow_subclassing_any = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_decorators = true
show_error_codes = true
disallow_untyped_calls = true
plugins = pydantic.mypy

[tool:pytest]
addopts = --strict-markers
asyncio_mode = auto
markers =
  recorder
  subscription
